@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

entity Event{
    *id
    --
    *name
    description
    *careTime
    lastRecordId
    unit
    sumVal
    sumTime
}

entity Unit{
    *id
    --
    *name
}



entity Record{
    *id
    --
    *eventId
    startTime
    endTime
    value
}


entity StepOffset{
    *id
    --
    *step
    *time
}

entity Steps{
    *id
    --
    *step
    *time(index)
}
Unit "0 or 1" |o-- Event
Record "0 or many" }o-- Event


@enduml